gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-label_break_value.rs
pub fn main() {
    'a: { // { dg-error ".E0658." "" { target *-*-* } }
        break 'a;
    }
}

